objects/Campaign.object
<CustomObject>
    <sharingModel>FullAccess</sharingModel>
    <fields>
        <fullName>NPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Territory__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>US-EAST</fullName>
                </value>
                <value>
                    <fullName>US-WEST</fullName>
                </value>
                <value>
                    <fullName>LA North</fullName>
                </value>
                <value>
                    <fullName>LA South</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>ZA</fullName>
                </value>
                <value>
                    <fullName>US-SOUTH</fullName>
                </value>
                <value>
                    <fullName>US-MIDWEST</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>TW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Type__c</fullName>
        <label>Ad Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Display-Ad</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>eNewsletter</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Paid-Social</fullName>
                </value>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>ProductListing</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Cannabis</fullName>
                </value>
                <value>
                    <fullName>Consumables</fullName>
                </value>
                <value>
                    <fullName>Customer Insights</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>New product intro</fullName>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AFM_Code__c</fullName>
        <label>AFM Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <description>Calculated difference between the amount budgeted for the event and the actual cost</description>
        <formula>BudgetedCost-ActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If there is a discount promotion associated with this campaign, add it here.</inlineHelpText>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Global</description>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMERICAS</fullName>
                    <label>AMER</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <label>Sales Team</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Ben/Nordics GDS</fullName>
                </value>
                <value>
                    <fullName>BZ - Team LA South</fullName>
                </value>
                <value>
                    <fullName>CA10 Analytical</fullName>
                </value>
                <value>
                    <fullName>CA10 LS Instrument</fullName>
                </value>
                <value>
                    <fullName>CA10 Reagents</fullName>
                </value>
                <value>
                    <fullName>CA - Marcom</fullName>
                </value>
                <value>
                    <fullName>CA - Team West</fullName>
                </value>
                <value>
                    <fullName>Central - EMEA - Islands</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Export Africa, SEE &amp; ED</fullName>
                </value>
                <value>
                    <fullName>Export CEE</fullName>
                </value>
                <value>
                    <fullName>Export CIS</fullName>
                </value>
                <value>
                    <fullName>Export Gulf</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France &amp; Spain GDS</fullName>
                </value>
                <value>
                    <fullName>France North</fullName>
                </value>
                <value>
                    <fullName>France South</fullName>
                </value>
                <value>
                    <fullName>Germany GDS</fullName>
                </value>
                <value>
                    <fullName>Germany North East</fullName>
                </value>
                <value>
                    <fullName>Germany South</fullName>
                </value>
                <value>
                    <fullName>Germany West</fullName>
                </value>
                <value>
                    <fullName>Italy Centre</fullName>
                </value>
                <value>
                    <fullName>Italy GDS</fullName>
                </value>
                <value>
                    <fullName>Italy North East</fullName>
                </value>
                <value>
                    <fullName>Italy North West</fullName>
                </value>
                <value>
                    <fullName>Italy South</fullName>
                </value>
                <value>
                    <fullName>MX - Team LA North</fullName>
                </value>
                <value>
                    <fullName>NA East – Chrome</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_NPI__c</fullName>
        <label>Name of NPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Partner/Vendor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Alignment__c</fullName>
        <description>Represents business group</description>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Applied Genomics (AG)</fullName>
                </value>
                <value>
                    <fullName>Automation &amp; Detection Systems (ADS)</fullName>
                </value>
                <value>
                    <fullName>Biotherapeutics</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chromatography (contains GC, LC)</fullName>
                </value>
                <value>
                    <fullName>Clinical Diagnostics</fullName>
                </value>
                <value>
                    <fullName>DNA</fullName>
                </value>
                <value>
                    <fullName>Drug Discovery</fullName>
                </value>
                <value>
                    <fullName>EcoAnalytix</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Imaging &amp; Analysis Systems (IAS)</fullName>
                </value>
                <value>
                    <fullName>Immuno Diagostics (ID)</fullName>
                </value>
                <value>
                    <fullName>Independent Clinical Lab (ICL)</fullName>
                </value>
                <value>
                    <fullName>Informatics (INF)</fullName>
                </value>
                <value>
                    <fullName>Inorganic (contains AA, ICP, MAS)</fullName>
                </value>
                <value>
                    <fullName>In Vivo Imaging (INV, QTS)</fullName>
                </value>
                <value>
                    <fullName>In Vivo Reagents (FAP, CLR)</fullName>
                </value>
                <value>
                    <fullName>Life Science Research</fullName>
                </value>
                <value>
                    <fullName>Material Charac. (IR, UVS, RAM, TEA)</fullName>
                </value>
                <value>
                    <fullName>Maternal Fetal Health</fullName>
                </value>
                <value>
                    <fullName>Microscopy/Tissue Imaging (TSC/TIS)</fullName>
                </value>
                <value>
                    <fullName>MI - Medical Imaging</fullName>
                </value>
                <value>
                    <fullName>MLD/MMD - Multimode Detection</fullName>
                </value>
                <value>
                    <fullName>Molecular Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Neonatal</fullName>
                </value>
                <value>
                    <fullName>NGS - Next Gen Sequencing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Preclinical</fullName>
                </value>
                <value>
                    <fullName>Prenatal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AG-ALH</fullName>
                </value>
                <value>
                    <fullName>AG-BIOO</fullName>
                </value>
                <value>
                    <fullName>AG-MFT</fullName>
                </value>
                <value>
                    <fullName>AG-NAP</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>ANP</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>ATT</fullName>
                </value>
                <value>
                    <fullName>AVC</fullName>
                </value>
                <value>
                    <fullName>AVS</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>BBT</fullName>
                </value>
                <value>
                    <fullName>BIO</fullName>
                </value>
                <value>
                    <fullName>BTX</fullName>
                </value>
                <value>
                    <fullName>CDI</fullName>
                </value>
                <value>
                    <fullName>CHO</fullName>
                </value>
                <value>
                    <fullName>CKP</fullName>
                </value>
                <value>
                    <fullName>CLH</fullName>
                </value>
                <value>
                    <fullName>CLR</fullName>
                </value>
                <value>
                    <fullName>CRD</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>DAB</fullName>
                </value>
                <value>
                    <fullName>DAO</fullName>
                </value>
                <value>
                    <fullName>DCS</fullName>
                </value>
                <value>
                    <fullName>DEL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demand Generation</fullName>
                </value>
                <value>
                    <fullName>Market Intelligence</fullName>
                </value>
                <value>
                    <fullName>PDG</fullName>
                </value>
                <value>
                    <fullName>Reputation</fullName>
                </value>
                <value>
                    <fullName>Sales Enablement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Element</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASLS</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>DAS</fullName>
                </value>
                <value>
                    <fullName>Dx</fullName>
                </value>
                <value>
                    <fullName>Emerging Tech.</fullName>
                </value>
                <value>
                    <fullName>INF</fullName>
                </value>
                <value>
                    <fullName>LST</fullName>
                </value>
                <value>
                    <fullName>MULTI</fullName>
                </value>
                <value>
                    <fullName>ONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Alias__c</fullName>
        <label>Campaign Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Piece__c</fullName>
        <label>Creative Piece</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Invoiced</fullName>
                </value>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>Entered in GELCO</fullName>
                </value>
                <value>
                    <fullName>VISA Purchase Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Assay Development</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Basic Research</fullName>
                </value>
                <value>
                    <fullName>Biofuels</fullName>
                </value>
                <value>
                    <fullName>Biotherapeutics</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Clinical / Biomonitoring</fullName>
                </value>
                <value>
                    <fullName>Clinical Genetics and Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Consumer products and Product Safety</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Drug Development</fullName>
                </value>
                <value>
                    <fullName>Drug Discovery</fullName>
                </value>
                <value>
                    <fullName>Electronic Components / Electroplating</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Foods &amp; Beverages</fullName>
                </value>
                <value>
                    <fullName>Forensics</fullName>
                </value>
                <value>
                    <fullName>Functional Genomics/Proteomics</fullName>
                </value>
                <value>
                    <fullName>General Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Genetic Screening</fullName>
                </value>
                <value>
                    <fullName>Genomics</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>High Throughput Screening</fullName>
                </value>
                <value>
                    <fullName>Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Life Science Research</fullName>
                </value>
                <value>
                    <fullName>Lubricants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Leader__c</fullName>
        <inlineHelpText>May add as many team members as needed separated by a comma.</inlineHelpText>
        <label>Campaign Leader</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Source__c</fullName>
        <label>Creative Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Brodeur</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Campaign_Id__c</fullName>
        <description>Informatics - Unique code name that identifies the campaign</description>
        <inlineHelpText>Informatics - Unique code name that identifies the campaign</inlineHelpText>
        <label>INF Campaign Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIT_Project_Num__c</fullName>
        <description>OLD-removed from page layouts 5/21/12</description>
        <label>MIT Project No.</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign__c</fullName>
        <description>OLD-Picklist version of lookup standard field.  DO NOT ADD NEW VALUES.
 This links multiple campaign components to one master umbrella campaign</description>
        <inlineHelpText>OLD - Please Create Campaign and link to it via Lookup in Field at top of page.</inlineHelpText>
        <label>OLD-Parent Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PerkinElmer LAS Website</fullName>
                </value>
                <value>
                    <fullName>AlphaScreen Phosphosensor Launch</fullName>
                </value>
                <value>
                    <fullName>ASLS-ADV-Q3-11-IRPharma-EU</fullName>
                </value>
                <value>
                    <fullName>ASLS-E3RD/EPKI-Q4-11-Compliance and IRPharma-GLO</fullName>
                </value>
                <value>
                    <fullName>ASLS-EPKI-Q2-12-AMS-SPP-GLO</fullName>
                </value>
                <value>
                    <fullName>ASLS-EPKI-Q3-11-Gateway-Projects-GLO</fullName>
                </value>
                <value>
                    <fullName>ASLS-EPKI-Q4-11-EnviroCampaign-EU</fullName>
                </value>
                <value>
                    <fullName>ASLS-GEN-Q1-Q2-Q3-Q4-Frontier-EU</fullName>
                </value>
                <value>
                    <fullName>ASLS-GEN-Q1-Q2-Q3-Q4-SpectrumTwo-EU</fullName>
                </value>
                <value>
                    <fullName>ASLS-GEN-Q4-11-Food-EU</fullName>
                </value>
                <value>
                    <fullName>ASLS-MO-Q2-11-FlexarSQ-MASTER-EU</fullName>
                </value>
                <value>
                    <fullName>ASLS-SEM-Q1-12-MSTOUR-UK</fullName>
                </value>
                <value>
                    <fullName>ASLS-SEM-Q2-11-IRLaunch-ES</fullName>
                </value>
                <value>
                    <fullName>ASLS-SEM-Q2-11-IRLaunch-IT</fullName>
                </value>
                <value>
                    <fullName>ASLS-SEM-Q2-11-IR-seminar-tour--FR</fullName>
                </value>
                <value>
                    <fullName>ASLS-WKSP-Q3-Q4-12-WestInorganic-NA</fullName>
                </value>
                <value>
                    <fullName>ASLS-SEM-Q3-11-AnorganicaNORTH-DACH</fullName>
                </value>
                <value>
                    <fullName>ASLS-SEM-Q3-Q4-11-Inorganic-Launch-Tour-FR</fullName>
                </value>
                <value>
                    <fullName>ASLS-SEM-Q4-11-AnorganicaSOUTH-DACH</fullName>
                </value>
                <value>
                    <fullName>ASLS-SEM-Q4-11-InorganicLaunchTour-MASTER-BE</fullName>
                </value>
                <value>
                    <fullName>ASLS-SEM-Q4-11-InorganicLaunchTour-MASTER-NL</fullName>
                </value>
                <value>
                    <fullName>ASLS-TS-Q2-11-HPLC-Budapest</fullName>
                </value>
                <value>
                    <fullName>ASLS-WC-12-LabX-Webinars-NA</fullName>
                </value>
                <value>
                    <fullName>ASLS-WKSP-10-RegionalEvents-NA</fullName>
                </value>
                <value>
                    <fullName>ASLS-WKSP-2012 IN Tour-NA</fullName>
                </value>
                <value>
                    <fullName>ASLS-WKSP-Q3-11-WestFallWksps-US</fullName>
                </value>
                <value>
                    <fullName>BIO_LR_Vendor_Groups</fullName>
                </value>
                <value>
                    <fullName>BIO_Q111_BioCompare</fullName>
                </value>
                <value>
                    <fullName>BIO_TM_VoiceCentric_GLO</fullName>
                </value>
                <value>
                    <fullName>BIO_TS_Q111_SBS_POSTERS_US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Processed__c</fullName>
        <label>Total Processed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Category__c</fullName>
        <label>Expense Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6328500 Event - Sem/Group/Meet</fullName>
                </value>
                <value>
                    <fullName>6321401 Promotional/Sponsorships</fullName>
                </value>
                <value>
                    <fullName>6321000 Advertising Space</fullName>
                </value>
                <value>
                    <fullName>6321403 Electronic/Web Mktg.</fullName>
                </value>
                <value>
                    <fullName>6327000 Trade Show Expense</fullName>
                </value>
                <value>
                    <fullName>6328600 Event - Exhibitry</fullName>
                </value>
                <value>
                    <fullName>6332800 Direct Mail</fullName>
                </value>
                <value>
                    <fullName>6322500 Advertising Produce</fullName>
                </value>
                <value>
                    <fullName>6331500 Public Relations</fullName>
                </value>
                <value>
                    <fullName>6321402 Film/Photo/Audio Vis</fullName>
                </value>
                <value>
                    <fullName>6321404 Instruction Manuals</fullName>
                </value>
                <value>
                    <fullName>6325000 Sales Literature</fullName>
                </value>
                <value>
                    <fullName>6332500 Literature Printing</fullName>
                </value>
                <value>
                    <fullName>6332600 Literature Fulfillment</fullName>
                </value>
                <value>
                    <fullName>6331600 Research/Strategy Dev.</fullName>
                </value>
                <value>
                    <fullName>6332700 Brand Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Owner__c</fullName>
        <description>Required field - dependent to Business Element field</description>
        <inlineHelpText>Please select the department responsible for this campaign.</inlineHelpText>
        <label>Functional Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marcom</fullName>
                </value>
                <value>
                    <fullName>Field Marketing-AM</fullName>
                </value>
                <value>
                    <fullName>Field Marketing-APAC</fullName>
                </value>
                <value>
                    <fullName>Field Marketing-EMEA</fullName>
                </value>
                <value>
                    <fullName>Marketing Operations</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Regional Marketing</fullName>
                </value>
                <value>
                    <fullName>Strategic Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>